--- a/index.html
+++ b/index.html
@@ -6,38 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
     <title>Resort.me</title>
 </head>
 <body>
     
-<header>
-    <nav id="navbar">
-      <div class="wrapper" id="wrapper">
-            <span class="logo">Resort.me</span>
-            <div class="links">
-                <a href="#" class="home">Home</a>
-                <a href="#about" class="about">About</a>
-                <a href="#testimonials" class="testimonials">Testimonials</a>
-                <a href="#contact" class="contact">Contact</a>
-            </div>
-            <div class="buttons">
-                <span class="login"><a href="">Login</a></span>
-                <div class="signup-box">
-                    <span class="signup"><a href="">Sign up</a></span>
+<header class="header" id="header">
+    <nav class="nav container" id="navbar">
+        <!-- <span class="logo"></span> -->
+        <a href="#" class="nav_logo">Resort.me</a>
+        <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list" id="nav-list">
+                    <li class="nav_item">
+                        <a href="#" class="nav_link active-link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#about" class="nav_link">About</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#testimonials" class="nav_link">Testimonials</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#contact" class="nav_link">Contact</a>
+                    </li>
+                </ul>
+                <div class="sign_buttons">
+                    <span class="login"><a href="">Login</a></span>
+                    <div class="signup-box">
+                        <span class="signup"><a href="">Sign up</a></span>
+                    </div>
                 </div>
+        </div>
+        <div class="nav_btns">
+            <div class="nav_toggle" id="nav-toggle">
+                <i class="fas fa-ellipsis-h"></i>
             </div>
-      </div>
+        </div>
     </nav>
+</header>
+<main>
     <img src="./img/1.png" alt="sign" class="sign-img">
-    <section class="header-elements" id="header-elements">
+    <section class="header-elements section" id="home">
         <div class="hero-desc">
             <p class="heading">
                 Find <span>best hotel</span> for you!
             </p>
             <p class="desc">
-                Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.
+                Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get
+                adieus nature day course for common. My little garret repair to desire he esteem.
             </p>
             <div class="buttons">
                 <div class="explore"><span>explore</span></div>
@@ -48,7 +66,7 @@
                 <span class="search-button">search</span>
                 <img class="scroll-line" src="./img/scrollvector.png" alt="scroll line">
                 <!-- <img class="scroll-arrow" src="./img/scrollarrow.png" alt="scroll arrow">
-                <img src="./img/scrollarrow1.svg" alt=""> -->
+                    <img src="./img/scrollarrow1.svg" alt=""> -->
                 <div class="scroll-arrow"><i class="fas fa-arrow-down"></i></div>
             </div>
         </div>
@@ -66,7 +84,8 @@
                     </div>
                 </div>
                 <p class="des">
-                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked delicate. Why sir
+                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked
+                    delicate. Why sir
                     end
                     believe uncivil respect.
                 </p>
@@ -87,7 +106,8 @@
                     </div>
                 </div>
                 <p class="des">
-                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked delicate. Why sir
+                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked
+                    delicate. Why sir
                     end
                     believe uncivil respect.
                 </p>
@@ -108,7 +128,8 @@
                     </div>
                 </div>
                 <p class="des">
-                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked delicate. Why sir
+                    Always get adieus nature day course for common. Relation so in confined smallest children unpacked
+                    delicate. Why sir
                     end
                     believe uncivil respect.
                 </p>
@@ -116,29 +137,29 @@
                     read more
                 </span>
             </div>
-          <img src="./img/map.png" alt="map" class="map-img">
-        </div>  
+            <img src="./img/map.png" alt="map" class="map-img">
+        </div>
     </section>
-</header>
-<main>
-    <div class="logos-container">
-        <span>planday</span>
-        <span>umbraco</span>
-        <span>pearlfisher.</span>
-        <span>brightpearl</span>
-        <span>planday</span>
-    </div>
-    <section class="gallery-container">
-        <img class="sign-img" src="./img/2.png" alt="sign vector">
-        <h2 class="heading"><Span>amazing</Span> gallery</h2>
-        <div class="galleries">
-           <div class="wrapper">
+   <section class="section logos">
+        <div class="logos-container">
+            <span>planday</span>
+            <span>umbraco</span>
+            <span>pearlfisher.</span>
+            <span>brightpearl</span>
+            <span>planday</span>
+        </div>
+   </section>
+    <section class="section galleries">
+        <div class="gallery-container">
+            <img class="sign-img" src="./img/2.png" alt="sign vector">
+            <h2 class="heading"><Span>amazing</Span> gallery</h2>
+            <div class="wrapper">
                 <img src="./img/gallery1.png" alt="tower">
                 <img src="./img/gallery2.png" alt="mountain">
                 <img src="./img/gallery3.png" alt="china">
                 <img src="./img/gallery4.png" alt="brazil">
                 <img src="./img/gallery5.png" alt="jaban">
-           </div>
+            </div>
         </div>
     </section>
 </main>
