finishing the structure

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
    </section>
     <section class="section galleries">
         <div class="gallery-container container">          
-            <h2 class="gallery_heading title">
+            <h2 class="subtitle gallery_heading">
                 <img class="title_sign-img" src="assets/img/2.png" alt="sign vector">
-                <span class="first colored">amazing</span><span class="second underlined">gallery</span>
+                <span class="first colored">amazing</span><span class="second underlined gray">gallery</span>
             </h2>
             <div class="img_wrapper">
                 <img class="gallery_img" src="assets/img/gallery1.png" alt="tower">
@@ -162,17 +162,17 @@
                 <img class="gallery_img" src="assets/img/gallery4.png" alt="brazil">
                 <img class="gallery_img" src="assets/img/gallery5.png" alt="jaban">
             </div>
-            <a href="./assets/pages/galleries.html" class="gallery_btn btn" target="_blank">view more</a>
+            <a href="./assets/pages/galleries.html" class="btn" target="_blank">view more</a>
         </div>
     </section>
     <section class="section destinations">
         <div class="destinations_container container">
-            <h2 class="title destination_heading">
+            <h2 class="subtitle destination_heading">
                 <img class="title_sign-img" src="assets/img/2.png" alt="sign vector">
-                <span class="first">our best</span><span class="second underlined colored">destinations</span>
+                <span class="first">our best</span><span class="second underlined colored green">destinations</span>
             </h2>
-            <div class="swiper mySwiper">
-                <div class="destination_cards swiper-wrapper" id="destination_cards">
+            <div class="swiper mySwiper_one">
+                <div class="destination_cards swiper-wrapper">
                     <div class="card swiper-slide">
                         <img class="destination_img" src="assets/img/des01.jpg" alt="hotel the mitsui kyoto">
                         <div class="heading">
@@ -380,6 +380,144 @@
             </div>
         </div>
     </section>
+    <section class="why_us section">
+        <div class="why_us-container container">
+            <h2 class="subtitle why_us-heading">
+                <img class="title_sign-img" src="assets/img/2.png" alt="sign vector">
+                <span class="first underlined gray">why</span><span class="second colored">us</span>
+            </h2>
+            <div class="why_us-cards">
+                <div class="card">
+                    <div class="card-img">
+                        <i class="fas fa-plane card-icon"></i>
+                    </div>
+                    <div class="card_heading">
+                        <h3 class="card_title">Best Airlines</h3>
+                    </div>
+                    <p class="card_description">
+                        Improving end distrusts may instantly was household applauded incommode. Why kept very ever home mrs.<br><br>
+                        Considered sympathize ten uncommonly occasional assistance sufficient not. Letter of on become he tended active enable
+                        to. Vicinity relation sensible sociable surprise screened no up as.
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <i class="fas fa-shield card-icon"></i>
+                    </div>
+                    <div class="card_heading">
+                        <h3 class="card_title">secure travel</h3>
+                    </div>
+                    <p class="card_description">
+                        Improving end distrusts may instantly was household applauded incommode. Why kept very ever home mrs.<br><br>
+                        Considered sympathize ten uncommonly occasional assistance sufficient not. Letter of on become he tended active
+                        enable
+                        to. Vicinity relation sensible sociable surprise screened no up as.
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <i class="fas fa-heartbeat card-icon"></i>
+                    </div>
+                    <div class="card_heading">
+                        <h3 class="card_title">safest journey</h3>
+                    </div>
+                    <p class="card_description">
+                        Improving end distrusts may instantly was household applauded incommode. Why kept very ever home mrs.<br><br>
+                        Considered sympathize ten uncommonly occasional assistance sufficient not. Letter of on become he tended active
+                        enable
+                        to. Vicinity relation sensible sociable surprise screened no up as.
+                    </p>
+                </div>
+            </div>
+            <a href="./assets/pages/contact.html" class="btn" target="_blank">contact us</a>
+        </div>
+    </section>
+    <section class="section customers">
+        <div class="customers_container container">
+            <h2 class="subtitle customers-heading">
+                <img class="title_sign-img" src="assets/img/2.png" alt="sign vector">
+                <span class="first">what our</span><span class="second colored underlined green">customers</span><span class="first">say</span>
+            </h2>
+            <div class="customers_cards mySwiper_two">
+                    <div class="swiper-wrapper customer_cards">
+                        <div class="swiper-slide">
+                            <div class="customer_card">
+                                <img src="assets/img/man.png" class="avatar" alt="man">
+                                <div class="card_title">chris william</div>
+                                <div class="card_subtitle">traveler</div>
+                                <p class="card_description">
+                                    Outward clothes promise at gravity do excited. Sufficient particular impossible by reasonable oh expression is. Yet
+                                    preference connection unpleasant yet melancholy but end appearance. And excellence partiality estimating terminated day
+                                    everything.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="customer_card">
+                                <img src="assets/img/man.png" class="avatar" alt="man">
+                                <div class="card_title">chris william</div>
+                                <div class="card_subtitle">traveler</div>
+                                <p class="card_description">
+                                    Outward clothes promise at gravity do excited. Sufficient particular impossible by reasonable oh expression
+                                    is. Yet
+                                    preference connection unpleasant yet melancholy but end appearance. And excellence partiality estimating
+                                    terminated day
+                                    everything.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="customer_card">
+                                <img src="assets/img/man.png" class="avatar" alt="man">
+                                <div class="card_title">chris william</div>
+                                <div class="card_subtitle">traveler</div>
+                                <p class="card_description">
+                                    Outward clothes promise at gravity do excited. Sufficient particular impossible by reasonable oh expression
+                                    is. Yet
+                                    preference connection unpleasant yet melancholy but end appearance. And excellence partiality estimating
+                                    terminated day
+                                    everything.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </section>
 </main>
+<footer class="footer">
+<div class="footer_container container">
+    <div class="footer_newsletter">
+        <h3>Subscribe to our Newsletter</h3>
+        <a href="#" class="btn">subscribe</a>
+    </div>
+    <div class="footer_links">
+        <div class="brand category">
+            <span>resort.me</span>
+        </div>
+        <div class="links category">
+            <span class="category_title">links</span>
+            <a href="#" class="link">best price</a>
+            <a href="#" class="link">contact</a>
+            <a href="#" class="link">social media</a>
+        </div>
+        <div class="company category">
+            <span class="category_title">company</span>
+            <a href="#" class="link">terms & conditions</a>
+            <a href="#" class="link">privacy policy</a>
+            <a href="#" class="link">about us</a>
+        </div>
+        <div class="getintouch category">
+            <span class="category_title">get in touch</span>
+            <p>somewhere on earth</p>
+            <p>088-598-658</p>
+            <p>info@resortme.net</p>
+        </div>
+    </div>
+    <div class="copyright">&copy; 2021 resort.me . All rights reserved</div>
+</div>
+</footer>
 </body>
 </html>
