--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <main class="main">
     <img src="assets/img/1.png" alt="sign" class="main_sign-img">
     <div class="scroll-arrow-up scroll"><i class="fas fa-arrow-up arrow-up-icon"></i></div>
-    <section class="section home container" id="home">
+    <section class="section home" id="home">
+        <div class="home_container container">
         <div class="hero-desc">
             <p class="heading">
                 Find <span>best hotel</span> for you!
@@ -139,6 +140,7 @@
             </div>
         </div>
         <img src="assets/img/map.png" alt="map" class="map_img">
+        </div>
     </section>
    <section class="section logos">
         <div class="logos-container container">
