--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/swiper.js" defer></script>
     <script src="assets/js/main.js" defer></script>
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <title>Resort.me</title>
 </head>
 <body>
