--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,7 +13,7 @@
     <script src="assets/js/swiper.js" defer></script>
     <script src="assets/js/main.js" defer></script>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <title>Resort.me</title>
+    <title>Resortme</title>
 </head>
 <body>
     
@@ -25,19 +26,19 @@
                         <a href="#" class="nav_link active-link">Home</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#about" class="nav_link">About</a>
+                        <a href="#" class="nav_link">About</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#testimonials" class="nav_link">Testimonials</a>
+                        <a href="#" class="nav_link">Testimonials</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#contact" class="nav_link">Contact</a>
+                        <a href="#" class="nav_link">Contact</a>
                     </li>
                 </ul>
                 <div class="sign_buttons">
-                    <span class="login sign"><a href="">Login</a></span>
+                    <span class="login sign"><a href="#">Login</a></span>
                     <div class="signup-box">
-                        <span class="signup sign"><a href="">Sign up</a></span>
+                        <span class="signup sign"><a href="#">Sign up</a></span>
                     </div>
                 </div>
         </div>
@@ -67,7 +68,7 @@
             </div>
             <div class="search-box">
                 <input type="text" class="search-input" placeholder="Search your favourite location">
-                <a href="./assets/pages/hotel.html" class="search-button btn">search</a>
+                <a href="#" class="search-button btn">search</a>
                 <img class="scroll-line" src="assets/img/scrollvector.png" alt="scroll line">
                 <div class="scroll-arrow-down scroll"><i class="fas fa-arrow-down arrow-down-icon"></i></div>
             </div>
@@ -165,7 +166,7 @@
                 <img class="gallery_img" src="assets/img/gallery4.png" alt="brazil">
                 <img class="gallery_img" src="assets/img/gallery5.png" alt="jaban">
             </div>
-            <a href="./assets/pages/galleries.html" class="btn" target="_blank">view more</a>
+            <a href="#" class="btn" target="_blank">view more</a>
         </div>
     </section>
     <section class="section destinations">
@@ -432,7 +433,7 @@
                     </p>
                 </div>
             </div>
-            <a href="./assets/pages/contact.html" class="btn" target="_blank">contact us</a>
+            <a href="#" class="btn" target="_blank">contact us</a>
         </div>
     </section>
     <section class="section customers">
